--- a/stely-voice-assistant/index.html
+++ b/stely-voice-assistant/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
     
-    <button id="start">Turn On/Off</button>
+    <button id="start">Turn On</button>
     <script src="main.js"></script>
 
 </body>
