--- a/stely-voice-assistant/index.html
+++ b/stely-voice-assistant/index.html
@@ -2,7 +2,7 @@
 <body>
     
     <button id="start">Turn On</button>
-    <p>Nice work</p>
+    <p>Nice work so far </p>
     <script src="main.js"></script>
 
 </body>
