--- a/stely-voice-assistant/index.html
+++ b/stely-voice-assistant/index.html
@@ -2,8 +2,9 @@
 <body>
     
     <button id="start">Turn On</button>
-    <p>Nice work so far </p>
+    <p><b>-></b>Nice work so far </p>
     <script src="main.js"></script>
+
 
 </body>
 </html>
